--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply from: './dependencies.gradle'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
     defaultConfig {
         applicationId "br.com.liveo.liveomvp"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -36,64 +36,9 @@ android {
 
     sourceSets {
         main {
-            res.srcDirs = [
-                    'src/main/res',
-                    'src/main/res-screen/base',
-                    'src/main/res-screen/home',
-                    'src/main/res-screen/login',
-                    'src/main/res-screen/splash',
-            ]
+            file('src/main/res-screen')
+                    .listFiles()
+                    .each { res.srcDirs += it.path }
         }
     }
-}
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    //Test
-    testCompile "junit:junit:${junit_version}"
-    testCompile "org.mockito:mockito-core:${mockito_version}"
-
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-    }
-
-    //Google
-    compile "com.android.support:design:${google_support_version}"
-    compile "com.android.support:appcompat-v7:${google_support_version}"
-    compile "com.android.support:recyclerview-v7:${google_support_version}"
-    kapt "com.android.databinding:compiler:${google_databinding_compiler_version}"
-
-    //Kotlin
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
-    //Dagger 2
-    compile "com.google.dagger:dagger:${dagger_version}"
-    kapt "com.google.dagger:dagger-compiler:${dagger_version}"
-
-    //Square
-    compile "com.squareup.retrofit2:retrofit:${retrofit_version}"
-    compile "com.squareup.okhttp3:logging-interceptor:${interceptor_version}"
-    compile "com.squareup.retrofit2:converter-gson:${retrofit_converter_gson_version}"
-    compile "com.squareup.retrofit2:adapter-rxjava2:${retrofit_adapter_rxjava_version}"
-
-    //rxjava
-    compile "io.reactivex.rxjava2:rxjava:${rxjava_version}"
-    compile "io.reactivex.rxjava2:rxandroid:${rxandroid_version}"
-
-    //Glide
-    compile "com.github.bumptech.glide:glide:${glide_version}"
-
-    //Others
-    compile "net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:${keyboard_event_version}"
-}
-repositories {
-    mavenCentral()
 }
