--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,10 @@ org.gradle.jvmargs=-Xmx1536m
     junit_version=4.12
     mockito_version=2.10.0
 
+#UI Test
+    espresso_core_version=3.0.1
+    espresso_contrib_version=3.0.1
+
 #Google
     #Library
     google_support_version=27.1.1
