--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ org.gradle.jvmargs=-Xmx1536m
 
 #UI Test
     espresso_core_version=3.0.1
+    uiautomator_v18_version=2.1.2
     espresso_contrib_version=3.0.1
 
 #Google
