Add Timber and Dialog

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,6 +46,9 @@ org.gradle.jvmargs=-Xmx1536m
     retrofit_converter_gson_version=2.3.0
     retrofit_adapter_rxjava_version=2.3.0
 
+#Timber = log
+    timber_version=4.7.0
+
 #Dagger 2
     dagger_version=2.10
 
