--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation "com.google.dagger:dagger:${dagger_version}"
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
 
+    //Timber - log
+    implementation "com.jakewharton.timber:timber:${timber_version}"
+
     //Square
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
     implementation "com.squareup.okhttp3:logging-interceptor:${interceptor_version}"
